# Ink_hands-on

./: .gitignore  ASSIGNMENT.md  Makefile  README.md  config.json  package-lock.json  package.json  tsconfig.json
devnet-azero/: devnet-azero-compose.yml
env/: dev.json  testnet.json
escrow/: Cargo.toml  INSTRUCTIONS.md  lib.rs
multisig/: Cargo.toml  lib.rs
new_a/: Cargo.toml  lib.rs
old_a/: Cargo.toml  lib.rs
scripts/: 1_deploy_escrow.ts  2_deploy_old_a.ts  3_upload_new_a.ts  4_upgrade_a.ts  5_deploy_multisig.ts  6_request_transfer.ts  7_check_balance.ts  run_signer.sh  utils.ts
signer/: Cargo.toml
signer/src/: config.rs  connection.rs  contracts.rs  main.rs  tests.rs
token/: Cargo.toml  lib.rs
